--- a/index.html
+++ b/index.html
@@ -263,5 +263,6 @@
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<!-- Main Script -->
 	<script src="assets/js/script.js"></script>
+	<!-- Solo una prueba -->
 </body>
 </html>
